--- a/index.html
+++ b/index.html
@@ -58,36 +58,50 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <ul>
 <li><a href="#us-mass-shootings">US Mass Shootings</a></li>
 <li><a href="#rlinkedin">Rlinkedin</a></li>
-<li><a href="#weather"><a href="http://mpiccirilli.github.io/massShootings.html">weatheR</a></a></li>
+<li><a href="#weather">weatheR</a></li>
 </ul>
 </div>
 
 <p>
+
+<p>
+
+<p><br></p>
 <div id="us-mass-shootings" class="section level3">
 <h3>US Mass Shootings</h3>
-<ul>
-<li>12/6/2015</li>
-</ul>
-<p>After the shooting in San Bernardino last week I wanted to explore some data on mass shootings in the US. I found a website called Shooting Tracker which has recorded mass shootings from 2013 to present. Each incident is cited by a news source, and is defined as having 4 or more victims, either killed or injured. You can take a look at my analysis here: <a href="https://github.com/mpiccirilli/mpiccirilli.github.io/massShootings.html">US Mass Shootings</a></p>
-<p><p>
+<div id="section" class="section level4">
+<h4>12/6/2015</h4>
+<p>After the shooting in San Bernardino last week I wanted to explore some data on mass shootings in the US. I found a website called Shooting Tracker which has recorded mass shootings from 2013 to present. Each incident is cited by a news source, and is defined as having 4 or more victims, either killed or injured. You can take a look at my analysis here: <a href="http://mpiccirilli.github.io/massShootings.html">US Mass Shootings</a></p>
+<p>
 
+<p>
+
+<p><br></p>
+</div>
 </div>
 <div id="rlinkedin" class="section level3">
 <h3>Rlinkedin</h3>
-<ul>
-<li>1/24/2015</li>
-</ul>
-<p>After contributing to the Rfacebook package, I realized there wasn’t a package to connect to the LinkedIn AP and decided to create one. The package can be found on CRAN here: <a href="https://cran.r-project.org/web/packages/Rlinkedin/">Rlinkedin</a></p>
+<div id="section-1" class="section level4">
+<h4>1/24/2015</h4>
+<p>After contributing to the Rfacebook package, I realized there wasn’t a package to connect to the LinkedIn AP and decided to create one.</p>
+<p>The package can be found on CRAN here: <a href="https://cran.r-project.org/web/packages/Rlinkedin/">Rlinkedin</a></p>
+<p><a href="http://mpiccirilli.github.io/Rlinkedin.html">README</a></p>
 <p><strong>Update:</strong> On May 12th 2015 LinkedIn changed the availability for most of their API endpoints. In order to gain full access to the API, you must apply to their Partnership Program. You can find detailed information regarding what endpoints are still openly available in their Transition Guide. This update basically wiped out almost all the functions of this package.</p>
-<p><p>
+<p>
 
+<p>
+
+<p><br></p>
+</div>
 </div>
 <div id="weather" class="section level3">
-<h3><a href="http://mpiccirilli.github.io/massShootings.html">weatheR</a></h3>
-<ul>
-<li>12/28/2014</li>
-</ul>
-<p>This package contains a set of functions to download, transform, and plot data from NOAA ISD weather stations. I created this package to support research at The Earth Institute while I worked there between 9/2014 - 12/2014. The package can be found on GitHub here: <a href="https://github.com/mpiccirilli/weatheR">weatheR</a></p>
+<h3>weatheR</h3>
+<div id="section-2" class="section level4">
+<h4>12/28/2014</h4>
+<p>This package contains a set of functions to download, transform, and plot data from NOAA ISD weather stations. I created this package to support research at The Earth Institute while I worked there between 9/2014 - 12/2014.</p>
+<p>The package can be found on GitHub here: <a href="https://github.com/mpiccirilli/weatheR">weatheR</a></p>
+<p><a href="http://mpiccirilli.github.io/massShootings.html">README</a></p>
+</div>
 </div>
 
 
