fixing weatheR link

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <h4>12/28/2014</h4>
 <p>This package contains a set of functions to download, transform, and plot data from NOAA ISD weather stations. I created this package to support research at The Earth Institute while I worked there between 9/2014 - 12/2014.</p>
 <p>The package can be found on GitHub here: <a href="https://github.com/mpiccirilli/weatheR">weatheR</a></p>
-<p><a href="http://mpiccirilli.github.io/massShootings.html">README</a></p>
+<p><a href="http://mpiccirilli.github.io/weatheR.html">README</a></p>
 </div>
 </div>
 
