--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <div class="container-fluid main-container">
 
 
+<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/mikepiccirilli" data-format="inline" data-related="false"></script>
+
+
 <div id="header">
 <h1 class="title">Personal Projects</h1>
 </div>
