--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <title>Personal Projects</title>
 
-<div align="center">
+<div style="float:left; width:20%;">
   
 <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
 <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/mikepiccirilli" data-format="inline" data-related="false"></script>
